SimpleWeather: WinUI update pt. 3
* ProgressAutoSuggestBox: update control ui
* Add BottomStepperNavigationBar to replace setup navigation stepper
* Update Setup UI
* Update ProgressAutoSuggestBox style over accent color

--- a/SimpleWeather.UWP.Shared/Strings/de/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/de/Resources.resw
@@ -467,7 +467,7 @@
   <data name="NoWeatherAlerts_Prompt.Text" xml:space="preserve">
     <value>Keine Wetterwarnungen verfügbar</value>
   </data>
-  <data name="LocationSearchHint.HeaderText" xml:space="preserve">
+  <data name="LocationSearchHint.Header" xml:space="preserve">
     <value>Ort hinzufügen</value>
   </data>
   <data name="SetupLocationSearchHint.PlaceholderText" xml:space="preserve">
@@ -529,10 +529,10 @@
   <data name="Attrib_Prefix.Text" xml:space="preserve">
     <value>Foto von</value>
   </data>
-  <data name="Label_Back.Label" xml:space="preserve">
+  <data name="StepperNavBar.BackButtonLabel" xml:space="preserve">
     <value>Zurück</value>
   </data>
-  <data name="Label_Next.Label" xml:space="preserve">
+  <data name="StepperNavBar.NextButtonLabel" xml:space="preserve">
     <value>Vorwärts</value>
   </data>
   <data name="WelcomePrompt.Text" xml:space="preserve">
