--- a/SimpleWeather.UWP.Shared/Strings/es/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/es/Resources.resw
@@ -465,7 +465,7 @@ Fuzzy</comment>
   <data name="NoWeatherAlerts_Prompt.Text" xml:space="preserve">
     <value>No hay alertas del tiempo disponibles.</value>
   </data>
-  <data name="LocationSearchHint.HeaderText" xml:space="preserve">
+  <data name="LocationSearchHint.Header" xml:space="preserve">
     <value>Agrega una ubicación</value>
   </data>
   <data name="SetupLocationSearchHint.PlaceholderText" xml:space="preserve">
@@ -526,10 +526,10 @@ Fuzzy</comment>
   <data name="Attrib_Prefix.Text" xml:space="preserve">
     <value>Foto por</value>
   </data>
-  <data name="Label_Back.Label" xml:space="preserve">
+  <data name="StepperNavBar.BackButtonLabel" xml:space="preserve">
     <value>Atrás</value>
   </data>
-  <data name="Label_Next.Label" xml:space="preserve">
+  <data name="StepperNavBar.NextButtonLabel" xml:space="preserve">
     <value>Siguiente</value>
   </data>
   <data name="WelcomePrompt.Text" xml:space="preserve">
