--- a/SimpleWeather.UWP.Shared/Strings/nl/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/nl/Resources.resw
@@ -456,7 +456,7 @@
   <data name="NoWeatherAlerts_Prompt.Text" xml:space="preserve">
     <value>Geen weerwaarschuwingen beschikbaar.</value>
   </data>
-  <data name="LocationSearchHint.HeaderText" xml:space="preserve">
+  <data name="LocationSearchHint.Header" xml:space="preserve">
     <value>Locatie Toevoegen</value>
   </data>
   <data name="SetupLocationSearchHint.PlaceholderText" xml:space="preserve">
@@ -517,10 +517,10 @@
   <data name="Attrib_Prefix.Text" xml:space="preserve">
     <value>Foto door</value>
   </data>
-  <data name="Label_Back.Label" xml:space="preserve">
+  <data name="StepperNavBar.BackButtonLabel" xml:space="preserve">
     <value>Terug</value>
   </data>
-  <data name="Label_Next.Label" xml:space="preserve">
+  <data name="StepperNavBar.NextButtonLabel" xml:space="preserve">
     <value>Volgende</value>
   </data>
   <data name="WelcomePrompt.Text" xml:space="preserve">
