SimpleWeather: notify user if background access is disabled
* When enabling background task dependent features, notify user if background access is denied before enabling feature

--- a/SimpleWeather.UWP.Shared/Strings/en/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/en/Resources.resw
@@ -617,4 +617,7 @@
     <value>Weather Summary</value>
     <comment>Weather Summary or Weather Overview</comment>
   </data>
+  <data name="Msg_BGAccessDeniedSettings" xml:space="preserve">
+    <value>Background access denied. Please enable in Settings.</value>
+  </data>
 </root>
