--- a/SimpleWeather.UWP.Shared/Strings/en/Config.resw
+++ b/SimpleWeather.UWP.Shared/Strings/en/Config.resw
@@ -155,6 +155,13 @@
         "newWeatherSource": ""
 }</value>
   </data>
+  <data name="tomorrowio" xml:space="preserve">
+    <value>{
+        "enabled": true,
+        "locSource": "Bing",
+        "newWeatherSource": ""
+}</value>
+  </data>
   <data name="weatherapi" xml:space="preserve">
     <value>{
         "enabled": true,
