SimpleWeather: add UI elements to handle case where no location data is available
* Handles the case where the app was setup previously, but location data is somehow non-existent or invalid
* Add Banner control for persistent error message

--- a/SimpleWeather.UWP.Shared/Strings/en/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/en/Resources.resw
@@ -654,4 +654,7 @@
   <data name="label_count_veryhigh" xml:space="preserve">
     <value>Very High</value>
   </data>
+  <data name="prompt_location_not_set" xml:space="preserve">
+    <value>Location not set. Please add a location</value>
+  </data>
 </root>
