--- a/SimpleWeather.UWP.Shared/Strings/en/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/en/Resources.resw
@@ -663,4 +663,7 @@
   <data name="prompt_location_not_set" xml:space="preserve">
     <value>Location not set. Please add a location</value>
   </data>
+  <data name="time_current" xml:space="preserve">
+    <value>Current</value>
+  </data>
 </root>
