--- a/SimpleWeather.UWP.Shared/Strings/pl/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/pl/Resources.resw
@@ -667,4 +667,7 @@ Fuzzy</comment>
   <data name="prompt_location_not_set" xml:space="preserve">
     <value>Nie ustalono lokalizacji. Proszę dodać lokalizację</value>
   </data>
+  <data name="time_current" xml:space="preserve">
+    <value>Aktualny</value>
+  </data>
 </root>
