--- a/SimpleWeather.UWP.Shared/Strings/en/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/en/Resources.resw
@@ -499,7 +499,7 @@
   <data name="DateTime_SecAgo" xml:space="preserve">
     <value>{0}s ago</value>
   </data>
-  <data name="Button_Refresh.Label" xml:space="preserve">
+  <data name="action_refresh" xml:space="preserve">
     <value>Refresh</value>
   </data>
   <data name="Label_Pin.Text" xml:space="preserve">
