--- a/SimpleWeather.UWP.Shared/Strings/es/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/es/Resources.resw
@@ -506,7 +506,7 @@ Fuzzy</comment>
   <data name="DateTime_SecAgo" xml:space="preserve">
     <value>Hace {0}s</value>
   </data>
-  <data name="Button_Refresh.Label" xml:space="preserve">
+  <data name="action_refresh" xml:space="preserve">
     <value>Actualizar</value>
   </data>
   <data name="Label_Pin.Text" xml:space="preserve">
