--- a/SimpleWeather.UWP.Shared/Strings/fr/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/fr/Resources.resw
@@ -499,7 +499,7 @@
   <data name="DateTime_SecAgo" xml:space="preserve">
     <value>il y a {0}s</value>
   </data>
-  <data name="Button_Refresh.Label" xml:space="preserve">
+  <data name="action_refresh" xml:space="preserve">
     <value>Rafraîchir</value>
   </data>
   <data name="Label_Pin.Text" xml:space="preserve">
